# robin

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
configs/: .gitignore  demand_data.yaml  demand_data.yml  demand_data_example.yaml  demand_data_example.yml  demand_data_one_year.yaml  supply_data.yaml  supply_data_error.yml  supply_data_example.yaml  supply_data_example.yml
data/: .gitignore  demand_data.yml  demand_data_example.yml  supply_data.yml  supply_data_example.yml
docs/: conf.py  index.md
examples/: calibration.py  data_loader.py  kernel.py  labs.py  scraping.py
notebooks/: .gitignore  1.0-kernel_plotter.ipynb  1.0-test_case.ipynb  10.0-renfe_forecasting_tft.ipynb  11.0-robin_labs.ipynb  12.0-autoencoder_interpretability.ipynb  13.0-interpretability_tutorial.ipynb  14.0-renfe_scraping.ipynb  15.0-service_generator.ipynb  16.0-example_accumulative_tsk.ipynb  17.0-example_passenger_decission.ipynb  18.0-Import_Fuzzy_Demand.ipynb  19.0-test_fuzzy_decision.ipynb  2.0-renfe_scraping.ipynb  2.0-test_case.ipynb  2.0-test_case_doubled_capacities.ipynb  20.0-decision_model_config.ipynb  27.0-renfe_scraping.ipynb  3.0-calibration.ipynb  3.0-test_case_removed_full_service.ipynb  4.0-supply_generator.ipynb  4.0-test_case_increased_prices.ipynb  5.0-test_case_tourist.ipynb  6.0-autoencoder_interpretability.ipynb  6.0-demand_network_input.ipynb  7.0-generate_1_year_services.ipynb  8.0-generate_1_year_demand.ipynb  9.0-renfe_tft_simulation.ipynb  kernel_plotter.ipynb  renfe.json  renfe_data.ipynb  renfe_plot_stations.ipynb  scraping_renfe.ipynb  (+2 more)
(+226 files in other folders)
