[project]
name = "robin"
version = "0.1.0"
description = ""
authors = [
    {name = "Kinrre", email = "enriqueadrian.villarrubia@alu.uclm.es"},
    {name = "DavidMunozValero", email = "david.munoz@uclm.es"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "optuna-dashboard (>=0.18.0,<0.19.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shapely (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
